CI-74 chore: hibernate integration