@@ -34,8 +34,25 @@ javafx {
 
 val lombokVersion = "1.18.36"
 val daggerVersion = "2.56"
+val hibernateVersion = "6.6.12.Final"
 
 dependencies {
+
+    // Database
+    runtimeOnly("org.postgresql:postgresql:42.7.2")
+
+    // Hibernate
+    implementation("org.hibernate:hibernate-core:$hibernateVersion"){
+        exclude(group="org.jboss.spec.javax.naming", module="jobss-naming-api_1.2_spec")
+    }
+    implementation("org.hibernate.validator:hibernate-validator:8.0.1.Final")
+    implementation("org.hibernate.common:hibernate-commons-annotations:6.0.6.Final")
+    implementation("jakarta.persistence:jakarta.persistence-api:3.1.0")
+    implementation("jakarta.transaction:jakarta.transaction-api:2.0.1")
+    implementation("jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1")
+    implementation("org.hibernate.orm:hibernate-jpamodelgen:$hibernateVersion")
+    annotationProcessor("org.hibernate.orm:hibernate-jpamodelgen:$hibernateVersion")
+//    implementation("jakarta.naming:jakarta.naming-api:2.0.0")
 
     implementation("com.fasterxml.jackson.core:jackson-databind:2.17.2")
 
@@ -178,4 +195,10 @@ tasks.processResources {
                 "dbName" to dbName
         )
     }
+}
+
+tasks.compileJava {
+    options.compilerArgs.addAll(listOf(
+            "--add-modules", "jakarta.persistence,jakarta.inject"
+    ))
 }
